--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -6,6 +6,7 @@
 
 body {
     padding-top: 0px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    background-image: url("../images/background.png");
 }
 
 /* Header Image Background - Change the URL below to your image path (example: ../images/background.jpg) */
