--- a/css/business-frontpage.css
+++ b/css/business-frontpage.css
@@ -13,7 +13,7 @@ body {
 
 .business-header {
     height: 400px;
-    background: url('http://i.imgur.com/CgJR7IB.jpg') center center no-repeat scroll;
+    background: url('http://i.imgur.com/99UtEUA.png') center center no-repeat scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
